fix: increased height of footer to prevent gap between waves & increased size of img on larger screens

--- a/community/Kera/style.css
+++ b/community/Kera/style.css
@@ -142,7 +142,7 @@ li {
         font-size: 50px;
     }
     .content {
-        height: 10vh;
+        height: 120px;
     }
 }
 
@@ -152,6 +152,6 @@ li {
         font-size:100px;
     }
     img {
-        height: 300px;
+        height: 400px;
     }
 }
